syntax = "proto3";
package brokerageApi;
option go_package = "github.com/mrNobody95/Gate/services/brokerage/api";
import "api/src/misc.proto";
import "api/src/models.proto";

service AssetService {
  rpc Set(api.Asset) returns (api.Void);
  rpc GetByName(GetAssetRequest) returns (api.Asset);
  rpc List(GetAssetListRequest) returns (api.Assets);
}

message GetAssetRequest {
  // @inject_tag: json:"name"
  string Name = 1;
}

message GetAssetListRequest {
  // @inject_tag: json:"page"
  int32 Page = 1;
}